Sectioning off the api call so that I don't waste free queries.

--- a/query.ipynb
+++ b/query.ipynb
@@ -30,27 +30,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'googleapiclient.discovery.Resource'>\n",
+      "<class 'googleapiclient.http.HttpRequest'>\n"
+     ]
+    }
+   ],
    "source": [
-    "def main(): \n",
-    "    \n",
-    "    youtube = build('youtube','v3', developerKey=YT_CREDENTIALS)\n",
-    "    print(type(youtube))\n",
+    "# making the query to the Police Activity youtube channel\n",
+    "youtube = build('youtube','v3', developerKey=YT_CREDENTIALS)\n",
+    "print(type(youtube))\n",
     "\n",
     "\n",
-    "    request = youtube.search().list(part='snippet',channelId=Police_Activity_id, type='video',maxResults=50)\n",
-    "    print(type(request))\n",
-    "    \n",
-    "    res = request.execute()\n",
-    "    pp = PrettyPrinter()\n",
-    "    pp.pprint(res)\n",
+    "request = youtube.search().list(part='snippet',channelId=Police_Activity_id, type='video',maxResults=50)\n",
+    "print(type(request))\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
+    "res = request.execute()\n",
     "\n",
-    "\n",
-    "    main()"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kind\n",
+      "etag\n",
+      "nextPageToken\n",
+      "regionCode\n",
+      "pageInfo\n",
+      "items\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in res:\n",
+    "    print(i)"
    ]
   }
  ],
