Created keyword_scraper file. This py file will get all the words from the title of all of the videos uploaded to the PoliceActivity Yt channel. These words will be written to a csv file and processed using pandas. I will use these words to make sure that the videos I download marked as use of force are %100 accurate.

--- a/query.ipynb
+++ b/query.ipynb
@@ -4,7 +4,17 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pinged your deployment. You successfully connected to MongoDB!\n",
+      "admin\n",
+      "local\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pymongo\n",
@@ -30,6 +40,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "VIOLENT_WORDS = [\"fatally\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -37,46 +56,74 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'googleapiclient.discovery.Resource'>\n",
-      "<class 'googleapiclient.http.HttpRequest'>\n"
+      "<class 'googleapiclient.discovery.Resource'>\n"
      ]
     }
    ],
    "source": [
     "# making the query to the Police Activity youtube channel\n",
     "youtube = build('youtube','v3', developerKey=YT_CREDENTIALS)\n",
-    "print(type(youtube))\n",
-    "\n",
-    "\n",
-    "request = youtube.search().list(part='snippet',channelId=Police_Activity_id, type='video',maxResults=50)\n",
-    "print(type(request))\n",
-    "\n",
-    "res = request.execute()\n",
-    "\n",
-    "\n"
+    "print(type(youtube))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kind\n",
-      "etag\n",
-      "nextPageToken\n",
-      "regionCode\n",
-      "pageInfo\n",
-      "items\n"
+      "<class 'googleapiclient.http.HttpRequest'>\n",
+      "<class 'dict'>\n"
      ]
     }
    ],
    "source": [
+    "request = youtube.search().list(part='snippet',channelId=Police_Activity_id, type='video',maxResults=50,)\n",
+    "print(type(request))\n",
+    "\n",
+    "res = request.execute()\n",
+    "\n",
+    "print(type(res))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pp = PrettyPrinter()\n",
+    "pp.pprint(res)\n",
+    "\n",
     "for i in res:\n",
     "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "playlist_request = youtube.playlistItems().list(part=\"snippet,contentDetails\",\n",
+    "                                       maxResults = 1,\n",
+    "                                       pageToken = \"\",\n",
+    "                                       playlistId=\"PL7csYbrPKf-zz09U1uVvt0ew00Myy4gIP\")\n",
+    "\n",
+    "playlist_response = playlist_request.execute()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pp.pprint(playlist_response)"
    ]
   }
  ],
