Wrote the regex to scrape the description of the youtube videos.

--- a/query.ipynb
+++ b/query.ipynb
@@ -1498,169 +1498,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = playlist_response['items'][0]['snippet']['description']\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'contentDetails': {'videoId': 'FOiY-_qZje4',\n",
-      "                     'videoPublishedAt': '2024-07-01T15:31:26Z'},\n",
-      "  'etag': 'pCOBj0OBB8MGIhdrQE6o-VQq7Js',\n",
-      "  'id': 'UEw3Y3NZYnJQS2YtenowOVUxdVZ2dDBldzAwTXl5NGdJUC5EQjI5RkQyREQzMTc1ODA0',\n",
-      "  'kind': 'youtube#playlistItem',\n",
-      "  'snippet': {'channelId': 'UCXMYxKMh3prxnM_4kYZuB3g',\n",
-      "              'channelTitle': 'PoliceActivity',\n",
-      "              'description': '* (Disclaimer: This video content is intended '\n",
-      "                             'for educational and informational purposes only) '\n",
-      "                             '*\\n'\n",
-      "                             'Utica, N.Y. — On June 28, 2024, at approximately '\n",
-      "                             '10:18 p.m. Utica Police officers were '\n",
-      "                             'proactively patrolling the West Utica area near '\n",
-      "                             'Shaw Street to assist the Criminal '\n",
-      "                             'Investigations Division (“CID”) with at least '\n",
-      "                             'two recent robbery investigations in which the '\n",
-      "                             'suspects brandished a black in color firearm and '\n",
-      "                             'forcibly demanded and stole property from '\n",
-      "                             'victims. In one of the incidents that occurred '\n",
-      "                             'on June 27th, the suspects were described as one '\n",
-      "                             'one being on foot and the other on a bicycle. '\n",
-      "                             'Based on the identifying factors from the '\n",
-      "                             'robbery, officers approached 13-year-old Nyah '\n",
-      "                             'Mway and the other juvenile as they matched the '\n",
-      "                             'robbery suspects’ descriptions and were in the '\n",
-      "                             'immediate vicinity of the previous robbery at '\n",
-      "                             'nearly the same time of day. Furthermore, he was '\n",
-      "                             'walking in the roadway in violation of New York '\n",
-      "                             'State Vehicle and Traffic Law 1156a. At the time '\n",
-      "                             'of the stop, the officers were following '\n",
-      "                             'requests from the Criminal Investigations '\n",
-      "                             'Division to interview and identify parties '\n",
-      "                             'matching the characteristics of the robbery '\n",
-      "                             'suspects, which, as stated, the two juveniles '\n",
-      "                             'matched. \\n'\n",
-      "                             '\\n'\n",
-      "                             'Accordingly, the officers attempted to conduct a '\n",
-      "                             'citizen stop of the two 13-year-old juveniles. '\n",
-      "                             'When the officers asked and went to pat frisk '\n",
-      "                             'Nyah Mway, he immediately fled on foot. While '\n",
-      "                             'fleeing he turns and appears to point a black '\n",
-      "                             'item at Officer Bryce Patterson and the other '\n",
-      "                             'officers. Officer Patterson caught up with Nyah '\n",
-      "                             'Mway, tackled and punched him, and as the two '\n",
-      "                             'wrestled on the ground, Officer Patrick Husnay '\n",
-      "                             'opened fire. The single shot hit Nyah Mway in '\n",
-      "                             'the chest. Nyah Mway was taken to Wynn Hospital, '\n",
-      "                             'where he died of his injuries. The item Nyah '\n",
-      "                             'Mway was holding was later determined to be a BB '\n",
-      "                             'or pellet gun that closely resembled a Glock 17 '\n",
-      "                             'Gen 5 handgun with a detachable magazine. Police '\n",
-      "                             'released an image showing the device did not '\n",
-      "                             'have an orange band on the barrel that many BB '\n",
-      "                             'gunmakers have added in recent years to '\n",
-      "                             'distinguish their products from firearms.\\n'\n",
-      "                             '\\n'\n",
-      "                             '⭐⭐⭐⭐⭐\\n'\n",
-      "                             'Special thanks to Shout-Out Supporters on '\n",
-      "                             'Patreon:\\n'\n",
-      "                             \"- 'DIY Solar Power with Will Prowse'\\n\"\n",
-      "                             '- Zak Bennett\\n'\n",
-      "                             '- Jeff Short\\n'\n",
-      "                             \"- 'walleye truth2power'\\n\"\n",
-      "                             '- Spencer Scott\\n'\n",
-      "                             '- RayJayOB\\n'\n",
-      "                             '- Sean Sheldon\\n'\n",
-      "                             '- Marvin Tobar\\n'\n",
-      "                             '- Lee Roberts\\n'\n",
-      "                             \"- 'Mr. Unknown'\\n\"\n",
-      "                             \"- 'iqtester.org'\\n\"\n",
-      "                             '- Josef Rex\\n'\n",
-      "                             \"- 'Skydog'\\n\"\n",
-      "                             '- Jesse\\n'\n",
-      "                             '- Ádám Lampért\\n'\n",
-      "                             '- Sabrina Bewey\\n'\n",
-      "                             '- Kelly Goodwin\\n'\n",
-      "                             \"- 'wuzy'\\n\"\n",
-      "                             \"- 'Jun'\\n\"\n",
-      "                             \"- 'Xenik'\\n\"\n",
-      "                             \"- 'Rom'\\n\"\n",
-      "                             '- kyle McBurnett\\n'\n",
-      "                             \"- 'Fishy Tuna'\\n\"\n",
-      "                             \"- 'GotsNoGroove Cheryl'\\n\"\n",
-      "                             \"- 'CombatKid'\\n\"\n",
-      "                             '- Exus Altimus\\n'\n",
-      "                             \"- 'Dawesenm'\\n\"\n",
-      "                             '- Paul Rohrbaugh\\n'\n",
-      "                             \"- 'Krazy KZ'\\n\"\n",
-      "                             '- Koby Bland\\n'\n",
-      "                             '- Christopher Payne\\n'\n",
-      "                             '- Zach Williams\\n'\n",
-      "                             '- Michael R Sheffield\\n'\n",
-      "                             '- Rich Biggs\\n'\n",
-      "                             \"- 'JTrip'\\n\"\n",
-      "                             '- Brant Eaton\\n'\n",
-      "                             \"- 'wvot'\\n\"\n",
-      "                             '- James Pringle\\n'\n",
-      "                             \"- 'AccuShoot.com'\\n\"\n",
-      "                             \"- 'Sopaul'\\n\"\n",
-      "                             '- Lisa Overly\\n'\n",
-      "                             '- Connor Davies\\n'\n",
-      "                             \"- 'Necko'\\n\"\n",
-      "                             '- Gerardo Flores\\n'\n",
-      "                             '- Anthony Eufemio\\n'\n",
-      "                             \"- 'Donkbot'\\n\"\n",
-      "                             '- Gage Kissinger\\n'\n",
-      "                             \"- 'coco Coco'\\n\"\n",
-      "                             '⭐⭐⭐⭐⭐\\n'\n",
-      "                             '\\n'\n",
-      "                             'Support us on Patreon: '\n",
-      "                             'https://www.patreon.com/PoliceActivity\\n'\n",
-      "                             'Follow us on X: https://x.com/Police_Activity\\n'\n",
-      "                             '\\n'\n",
-      "                             '🛍️ Check out our Amazon store: '\n",
-      "                             'https://www.amazon.com/shop/PoliceActivity 🛍️\\n'\n",
-      "                             '\\n'\n",
-      "                             'Disclosure: Please note that we will receive a '\n",
-      "                             'small commission from purchases made through our '\n",
-      "                             'Amazon store. This is at no cost to you. It '\n",
-      "                             'helps support our channel and allows us to '\n",
-      "                             'continue creating content for you. Your support '\n",
-      "                             'is highly appreciated!\\n'\n",
-      "                             '\\n'\n",
-      "                             'Timestamps:\\n'\n",
-      "                             '0:00 - Bodycam: Officer Patterson\\n'\n",
-      "                             '1:05 - Bodycam: Officer Husnay\\n'\n",
-      "                             '2:04 - Bodycam: Officer Citriniti\\n'\n",
-      "                             '4:36 - Patreon Supporters',\n",
-      "              'playlistId': 'PL7csYbrPKf-zz09U1uVvt0ew00Myy4gIP',\n",
-      "              'position': 0,\n",
-      "              'publishedAt': '2024-07-01T15:34:25Z',\n",
-      "              'resourceId': {'kind': 'youtube#video', 'videoId': 'FOiY-_qZje4'},\n",
-      "              'thumbnails': {'default': {'height': 90,\n",
-      "                                         'url': 'https://i.ytimg.com/vi/FOiY-_qZje4/default.jpg',\n",
-      "                                         'width': 120},\n",
-      "                             'high': {'height': 360,\n",
-      "                                      'url': 'https://i.ytimg.com/vi/FOiY-_qZje4/hqdefault.jpg',\n",
-      "                                      'width': 480},\n",
-      "                             'maxres': {'height': 720,\n",
-      "                                        'url': 'https://i.ytimg.com/vi/FOiY-_qZje4/maxresdefault.jpg',\n",
-      "                                        'width': 1280},\n",
-      "                             'medium': {'height': 180,\n",
-      "                                        'url': 'https://i.ytimg.com/vi/FOiY-_qZje4/mqdefault.jpg',\n",
-      "                                        'width': 320},\n",
-      "                             'standard': {'height': 480,\n",
-      "                                          'url': 'https://i.ytimg.com/vi/FOiY-_qZje4/sddefault.jpg',\n",
-      "                                          'width': 640}},\n",
-      "              'title': 'Utica, N.Y. Cop Fatally Shoots 13-year-old Boy Armed '\n",
-      "                       'With Pellet Gun',\n",
-      "              'videoOwnerChannelId': 'UCXMYxKMh3prxnM_4kYZuB3g',\n",
-      "              'videoOwnerChannelTitle': 'PoliceActivity'}}]\n"
+      "('* (Disclaimer: This video content is intended for educational and '\n",
+      " 'informational purposes only) *\\n'\n",
+      " 'Utica, N.Y. — On June 28, 2024, at approximately 10:18 p.m. Utica Police '\n",
+      " 'officers were proactively patrolling the West Utica area near Shaw Street to '\n",
+      " 'assist the Criminal Investigations Division (“CID”) with at least two recent '\n",
+      " 'robbery investigations in which the suspects brandished a black in color '\n",
+      " 'firearm and forcibly demanded and stole property from victims. In one of the '\n",
+      " 'incidents that occurred on June 27th, the suspects were described as one one '\n",
+      " 'being on foot and the other on a bicycle. Based on the identifying factors '\n",
+      " 'from the robbery, officers approached 13-year-old Nyah Mway and the other '\n",
+      " 'juvenile as they matched the robbery suspects’ descriptions and were in the '\n",
+      " 'immediate vicinity of the previous robbery at nearly the same time of day. '\n",
+      " 'Furthermore, he was walking in the roadway in violation of New York State '\n",
+      " 'Vehicle and Traffic Law 1156a. At the time of the stop, the officers were '\n",
+      " 'following requests from the Criminal Investigations Division to interview '\n",
+      " 'and identify parties matching the characteristics of the robbery suspects, '\n",
+      " 'which, as stated, the two juveniles matched. \\n'\n",
+      " '\\n'\n",
+      " 'Accordingly, the officers attempted to conduct a citizen stop of the two '\n",
+      " '13-year-old juveniles. When the officers asked and went to pat frisk Nyah '\n",
+      " 'Mway, he immediately fled on foot. While fleeing he turns and appears to '\n",
+      " 'point a black item at Officer Bryce Patterson and the other officers. '\n",
+      " 'Officer Patterson caught up with Nyah Mway, tackled and punched him, and as '\n",
+      " 'the two wrestled on the ground, Officer Patrick Husnay opened fire. The '\n",
+      " 'single shot hit Nyah Mway in the chest. Nyah Mway was taken to Wynn '\n",
+      " 'Hospital, where he died of his injuries. The item Nyah Mway was holding was '\n",
+      " 'later determined to be a BB or pellet gun that closely resembled a Glock 17 '\n",
+      " 'Gen 5 handgun with a detachable magazine. Police released an image showing '\n",
+      " 'the device did not have an orange band on the barrel that many BB gunmakers '\n",
+      " 'have added in recent years to distinguish their products from firearms.')\n"
      ]
     }
    ],
    "source": [
-    "pp.pprint(playlist_response['items'][0]['snippet']['playlistId'])"
+    "import re\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Define the pattern to search for\n",
+    "pattern = r'Special thanks to Shout-Out Supporters on Patreon:'\n",
+    "\n",
+    "# Find the position where the pattern appears\n",
+    "match = re.search(pattern, text)\n",
+    "\n",
+    "if match:\n",
+    "    # Extract the text before the match\n",
+    "    desired_text = text[:match.start()].strip()\n",
+    "else:\n",
+    "    # If pattern is not found, consider handling the case (e.g., read until end)\n",
+    "    desired_text = text\n",
+    "\n",
+    "pattern2 = pattern = r'⭐⭐⭐⭐⭐'\n",
+    "\n",
+    "match2 = re.search(pattern2, text)\n",
+    "if match2:\n",
+    "    # Extract the text before the match\n",
+    "    desired_text = text[:match2.start()].strip()\n",
+    "else:\n",
+    "    # If pattern is not found, consider handling the case (e.g., read until end)\n",
+    "    desired_text = text\n",
+    "\n",
+    "pp.pprint(desired_text)\n"
    ]
   }
  ],
