Tested the regex code from gpt to make sure it works even when things don't need to be removed from the code.

--- a/query.ipynb
+++ b/query.ipynb
@@ -1498,54 +1498,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = playlist_response['items'][0]['snippet']['description']\n",
+    "tex1= playlist_response['items'][0]['snippet']['description']\n",
     "\n",
-    "\n"
+    "text = \"** (Disclaimer: This video content is intended for educational and informational purposes only) ** Motorcycle vs cops: Oregon police chase results in  payout to biker. A jury awarded a Eugene man  after he was kicked by an Oregon State Police captain during a 2012 traffic stop. The Register-Guard reported that Capt. Rob Edwards testified in U.S. District Court in Eugene as part of a civil trial that his force was in line with state police policies. Edwards was accused of using excessive force against Justin Wilkens, whose collarbone was broken when Edwards took him into custody Aug. 3, 2012, after chasing down the speeding rider. The jury claimed Edwards violated Wilkens' civil rights. Wilkens says he did not recognize Edwards' unmarked car as a police vehicle. Wilkens sued Edwards for alleged civil rights violations and sought unspecified noneconomic damages in addition to more than  in reimbursement for medical and motorcycle towing and repair bills.\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('* (Disclaimer: This video content is intended for educational and '\n",
-      " 'informational purposes only) *\\n'\n",
-      " 'Utica, N.Y. — On June 28, 2024, at approximately 10:18 p.m. Utica Police '\n",
-      " 'officers were proactively patrolling the West Utica area near Shaw Street to '\n",
-      " 'assist the Criminal Investigations Division (“CID”) with at least two recent '\n",
-      " 'robbery investigations in which the suspects brandished a black in color '\n",
-      " 'firearm and forcibly demanded and stole property from victims. In one of the '\n",
-      " 'incidents that occurred on June 27th, the suspects were described as one one '\n",
-      " 'being on foot and the other on a bicycle. Based on the identifying factors '\n",
-      " 'from the robbery, officers approached 13-year-old Nyah Mway and the other '\n",
-      " 'juvenile as they matched the robbery suspects’ descriptions and were in the '\n",
-      " 'immediate vicinity of the previous robbery at nearly the same time of day. '\n",
-      " 'Furthermore, he was walking in the roadway in violation of New York State '\n",
-      " 'Vehicle and Traffic Law 1156a. At the time of the stop, the officers were '\n",
-      " 'following requests from the Criminal Investigations Division to interview '\n",
-      " 'and identify parties matching the characteristics of the robbery suspects, '\n",
-      " 'which, as stated, the two juveniles matched. \\n'\n",
-      " '\\n'\n",
-      " 'Accordingly, the officers attempted to conduct a citizen stop of the two '\n",
-      " '13-year-old juveniles. When the officers asked and went to pat frisk Nyah '\n",
-      " 'Mway, he immediately fled on foot. While fleeing he turns and appears to '\n",
-      " 'point a black item at Officer Bryce Patterson and the other officers. '\n",
-      " 'Officer Patterson caught up with Nyah Mway, tackled and punched him, and as '\n",
-      " 'the two wrestled on the ground, Officer Patrick Husnay opened fire. The '\n",
-      " 'single shot hit Nyah Mway in the chest. Nyah Mway was taken to Wynn '\n",
-      " 'Hospital, where he died of his injuries. The item Nyah Mway was holding was '\n",
-      " 'later determined to be a BB or pellet gun that closely resembled a Glock 17 '\n",
-      " 'Gen 5 handgun with a detachable magazine. Police released an image showing '\n",
-      " 'the device did not have an orange band on the barrel that many BB gunmakers '\n",
-      " 'have added in recent years to distinguish their products from firearms.')\n"
+      "('** (Disclaimer: This video content is intended for educational and '\n",
+      " 'informational purposes only) ** Motorcycle vs cops: Oregon police chase '\n",
+      " 'results in  payout to biker. A jury awarded a Eugene man  after he was '\n",
+      " 'kicked by an Oregon State Police captain during a 2012 traffic stop. The '\n",
+      " 'Register-Guard reported that Capt. Rob Edwards testified in U.S. District '\n",
+      " 'Court in Eugene as part of a civil trial that his force was in line with '\n",
+      " 'state police policies. Edwards was accused of using excessive force against '\n",
+      " 'Justin Wilkens, whose collarbone was broken when Edwards took him into '\n",
+      " 'custody Aug. 3, 2012, after chasing down the speeding rider. The jury '\n",
+      " \"claimed Edwards violated Wilkens' civil rights. Wilkens says he did not \"\n",
+      " \"recognize Edwards' unmarked car as a police vehicle. Wilkens sued Edwards \"\n",
+      " 'for alleged civil rights violations and sought unspecified noneconomic '\n",
+      " 'damages in addition to more than  in reimbursement for medical and '\n",
+      " 'motorcycle towing and repair bills.')\n"
      ]
     }
    ],
