Moving onto the testing phase of my code now.

--- a/query.ipynb
+++ b/query.ipynb
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1498,56 +1498,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Utica',\n",
-      " 'N.Y',\n",
-      " 'Cop',\n",
-      " 'Fatally',\n",
-      " 'Shoots',\n",
-      " '13-year-old',\n",
-      " 'Boy',\n",
-      " 'Armed',\n",
-      " 'With',\n",
-      " 'Pellet',\n",
-      " 'Gun']\n",
-      "{'13-year-old': 1,\n",
-      " 'Armed': 1,\n",
-      " 'Boy': 1,\n",
-      " 'Cop': 1,\n",
-      " 'Fatally': 1,\n",
-      " 'Gun': 1,\n",
-      " 'N.Y': 1,\n",
-      " 'Pellet': 1,\n",
-      " 'Shoots': 1,\n",
-      " 'Utica': 1,\n",
-      " 'With': 1}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import re\n",
-    "import string\n",
-    "text = playlist_response['items'][0]['snippet']['title']\n",
     "\n",
-    "token_list =  [re.sub('^[{0}]+|[{0}]+$'.format(string.punctuation), '', w) for w in text.split()]\n",
     "\n",
-    "pp.pprint(token_list)\n",
+    "import csv\n",
     "\n",
-    "tokens_dict = {}\n",
+    "yt_data_file = open ('yt-data.csv','w',newline='')\n",
+    "csv_writer = csv.writer(yt_data_file)\n",
     "\n",
-    "for token in token_list:\n",
-    "    if token in tokens_dict:\n",
-    "        tokens_dict[token] +=1\n",
-    "    else:\n",
-    "        tokens_dict[token] = 1\n",
-    "\n",
-    "pp.pprint(tokens_dict)\n"
+    "csv_writer.writerow(playlist_response)\n"
    ]
   }
  ],
