Debugging the nextpagetoken not updating

--- a/query.ipynb
+++ b/query.ipynb
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1490,37 +1490,85 @@
       " 'nextPageToken': 'EAAajgFQVDpDQUVpRURWRk16UXpRMEkzTWtVM01FUkRORFlvQVVqeXVLZW9sWWFIQTFBQldrVWlRMmxLVVZSRVpHcGpNV3hwWTJ4Q1RGcHBNVFpsYWtFMVZsUkdNVlp1V2pCTlIxWXpUVVJDVG1WWWF6QmFNR3hSUldkM1NXZGFiVXgwUVZsUk1FdGhNWGhCVFNJ',\n",
       " 'pageInfo': {'resultsPerPage': 1, 'totalResults': 1905}}\n"
      ]
-    }
-   ],
-   "source": [
-    "pp.pprint(playlist_response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>kind</th>\n",
+       "      <td>youtube#playlistItemListResponse</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>etag</th>\n",
+       "      <td>Z34phE1jdWy8I7qyzqwzlj39Zvo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>nextPageToken</th>\n",
+       "      <td>EAAajgFQVDpDQUVpRURWRk16UXpRMEkzTWtVM01FUkRORF...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>items</th>\n",
+       "      <td>[{'kind': 'youtube#playlistItem', 'etag': 'pCO...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pageInfo</th>\n",
+       "      <td>{'totalResults': 1905, 'resultsPerPage': 1}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "40"
+       "                                                               0\n",
+       "kind                            youtube#playlistItemListResponse\n",
+       "etag                                 Z34phE1jdWy8I7qyzqwzlj39Zvo\n",
+       "nextPageToken  EAAajgFQVDpDQUVpRURWRk16UXpRMEkzTWtVM01FUkRORF...\n",
+       "items          [{'kind': 'youtube#playlistItem', 'etag': 'pCO...\n",
+       "pageInfo             {'totalResults': 1905, 'resultsPerPage': 1}"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "pp.pprint(playlist_response[\"items\"])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "\n",
-    "import csv\n",
-    "\n",
-    "yt_data_file = open ('yt-data.csv','w',newline='')\n",
-    "csv_writer = csv.writer(yt_data_file)\n",
-    "\n",
-    "csv_writer.writerow(playlist_response)\n"
+    "df.to_csv(\"yt-data.csv\",encoding=\"utf-8\")"
    ]
   }
  ],
