Begining to debug scraper.py file now to figure out why the token isn't updating. Jesus help me plz.

--- a/query.ipynb
+++ b/query.ipynb
@@ -1568,7 +1568,7 @@
    "source": [
     "\n",
     "\n",
-    "df.to_csv(\"yt-data.csv\",encoding=\"utf-8\")"
+    "#df.to_csv(\"yt-data.csv\",encoding=\"utf-8\")"
    ]
   }
  ],
