--- a/keywords.ipynb
+++ b/keywords.ipynb
@@ -2,18 +2,149 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Word</th>\n",
+       "      <th>Occurances</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Police</td>\n",
+       "      <td>938</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>Bodycam</td>\n",
+       "      <td>689</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Suspect</td>\n",
+       "      <td>651</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>Shows</td>\n",
+       "      <td>552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Man</td>\n",
+       "      <td>542</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1405</th>\n",
+       "      <td>Flossmoor</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1404</th>\n",
+       "      <td>Dropped</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>Rushing</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1402</th>\n",
+       "      <td>Knox</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1477</th>\n",
+       "      <td>Climbed</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2302 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Word  Occurances\n",
+       "8        Police         938\n",
+       "37      Bodycam         689\n",
+       "11      Suspect         651\n",
+       "38        Shows         552\n",
+       "23          Man         542\n",
+       "...         ...         ...\n",
+       "1405  Flossmoor           1\n",
+       "1404    Dropped           1\n",
+       "73      Rushing           1\n",
+       "1402       Knox           1\n",
+       "1477    Climbed           1\n",
+       "\n",
+       "[2302 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import pandas as pd \n",
-    "\n"
+    "import pandas as pd\n",
+    "from pprint import PrettyPrinter\n",
+    "\n",
+    "pp = PrettyPrinter()\n",
+    "\n",
+    "\n",
+    "tokens_df = pd.read_csv(\"tokens.csv\")\n",
+    "tokens_df.loc[len(tokens_df.index)] = ['Wanted',14]\n",
+    "tokens_df.columns = [\"Word\",\"Occurances\"]\n",
+    "\n",
+    "tokens_df.sort_values(by=\"Occurances\",ascending=False)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "rpd-yt-scraping",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
