Changed the file to a txt.

--- a/mongo_titles.ipynb
+++ b/mongo_titles.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
     "\n",
     "\n",
     "    \n",
-    "with open(\"yt-titles.csv\",\"w\") as file:\n",
+    "with open(\"yt-titles.txt\",\"w\") as file:\n",
     "    for item in result:\n",
     "\n",
     "        if item['video_title'] == \"Deleted video\":\n",
