--- a/query.ipynb
+++ b/query.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,51 +16,33 @@
     "from googleapiclient.discovery import build\n",
     "\n",
     "\n",
-    "# Load my api key that is stored as an environment variable into this environment\n",
+    "### Load API key ###\n",
     "load_dotenv()\n",
     "YT_CREDENTIALS = os.getenv(\"YOUTUBE_API_KEY\")\n",
     "\n",
-    "#add the youtube id to the end of this preamble\n",
+    "### add the youtube id to the end of this preamble ###\n",
     "yt_preamble = \"https://www.youtube.com/watch?v=\"\n",
     "\n",
-    "# PoliceActivity channel id\n",
+    "#### PoliceActivity channel id ###\n",
     "Police_Activity_id = \"UCXMYxKMh3prxnM_4kYZuB3g\"\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'googleapiclient.discovery.Resource'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# making the query to the Police Activity youtube channel\n",
-    "youtube = build('youtube','v3', developerKey=YT_CREDENTIALS)\n",
-    "print(type(youtube))"
+    "youtube = build('youtube','v3', developerKey=YT_CREDENTIALS)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'googleapiclient.http.HttpRequest'>\n",
-      "<class 'dict'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "request = youtube.search().list(part='snippet',channelId=Police_Activity_id, type='video',maxResults=1,)\n",
     "print(type(request))\n",
@@ -1274,14 +1256,13 @@
     "\n",
     "playlist_response = playlist_request.execute()\n",
     "\n",
-    "pp.pprint(playlist_response)\n",
-    "\n"
+    "pp.pprint(playlist_response)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rpd-yt-scraping",
+   "display_name": "viz-data-env",
    "language": "python",
    "name": "python3"
   },
@@ -1295,7 +1276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
